# CatHash

./: CMakeInstallUsr.txt  CMakeLists.txt  LICENSE  README.md  REDME.md  UserGuide
core/: create_hash.hpp  read_file.hpp
example/: main.cpp
include/: Cathash.hpp  hash256.hpp
lib/: core_hash256.cc  hash256.cc  read_hash_file.cc
